; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_handle_sp_align.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_sleh.c_handle_sp_align.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [36 x i8] c"SP alignment exception from kernel.\00", align 1
@EXC_BAD_ACCESS = common dso_local global i32 0, align 4
@EXC_ARM_SP_ALIGN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @handle_sp_align to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_sp_align(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca [2 x i32], align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 2, i32* %5, align 4
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @get_saved_state_cpsr(i32* %6)
  %8 = call i32 @PSR64_IS_USER(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @panic_with_thread_kernel_state(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32* %11)
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i32, i32* @EXC_BAD_ACCESS, align 4
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* @EXC_ARM_SP_ALIGN, align 4
  %16 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  store i32 %15, i32* %16, align 4
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @get_saved_state_sp(i32* %17)
  %19 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 1
  store i32 %18, i32* %19, align 4
  %20 = load i32, i32* %3, align 4
  %21 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @exception_triage(i32 %20, i32* %21, i32 %22)
  %24 = call i32 @assert(i32 0)
  ret void
}

declare dso_local i32 @PSR64_IS_USER(i32) #1

declare dso_local i32 @get_saved_state_cpsr(i32*) #1

declare dso_local i32 @panic_with_thread_kernel_state(i8*, i32*) #1

declare dso_local i32 @get_saved_state_sp(i32*) #1

declare dso_local i32 @exception_triage(i32, i32*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
